added route for edit and do some cleanup

--- a/src/components/student-list/student/student.css
+++ b/src/components/student-list/student/student.css
@@ -3,7 +3,12 @@
   padding: 5px;
 }
 .student-container {
-  background-color: gray;
+  background-color: floralwhite;
   padding: 10px;
   margin: 10px 5px;
+}
+.btn-container {
+  display: inline-block;
+  /* float: right; */
+  padding-left: 60px;
 }
