--- a/src/components/student-form/StudentForm.css
+++ b/src/components/student-form/StudentForm.css
@@ -2,6 +2,9 @@
   margin-left: 20px;
   margin-bottom: 15px;
 }
+.radio-input {
+  margin-right: 20px;
+}
 
 .submit-btn {
   margin: 20px;
@@ -16,4 +19,9 @@
 .form-input-error {
   color: red;
   font-weight: 600;
+}
+
+.student-form-header {
+  text-align: center;
+  padding: 20px 0;
 }
